[bp/r33696][FIX] IE: Don't hide overflow on all dialogs (was making plugin edit unusable)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/proposals@33700 b456876b-0849-0410-b77d-98878d47e9d5

--- a/6.x/css/ie7.css
+++ b/6.x/css/ie7.css
@@ -65,6 +65,4 @@ h3.box-title {
 	position: relative;
 }
 
-.ui-dialog .ui-dialog-content {
-	overflow: hidden !important;
-}
+
